# linearjc

./: .gitignore  LICENSE  README.md  ROADMAP.md  SPEC.md  requirements.txt  setup.py
docs/: deployment-workflow.md  future-dag-and-observability.md  job-design-guide.md  phase15-register-model-SPEC.md  phase15-register-model-TRACKER.md  phase16-notes.md
examples/: config.yaml.sample  data_registry.yaml.sample  executor-config.yaml.sample
examples/executor-jobs/: hello.followup.sh  hello.long.sh  hello.world.sh
examples/jobs/: README.md  hello.followup.yaml  hello.world.yaml
src/coordinator/: __init__.py  archive_handler.py  capability_discovery.py  developer_api.py  job_discovery.py  job_executor.py  job_tracker.py  logging_utils.py  main.py  message_signing.py  minio_manager.py  models.py  mqtt_client.py  output_locks.py  security_utils.py  tree_builder.py  tree_validation.py
src/coordinator_v2/: __init__.py  coordinator.py  event_router.py  executor_registry.py  job_state_machine.py  job_tracker.py  main.py  register_lock.py  registry_reload.py  tree_tracker.py  tree_validator.py
src/executor/: Cargo.toml
src/executor/src/: main.rs
src/linearjc-core/: Cargo.toml
src/linearjc-core/src/: archive.rs  execution.rs  isolation.rs  job.rs  lib.rs  package.rs  signing.rs  workdir.rs
tests/: conftest.py
tests/e2e/: conftest.py  test_chain.py  test_deploy.py  test_exec.py  test_kill.py  test_logs.py  test_ps.py  test_smoke.py  test_status.py  test_sync.py  test_tail.py
tests/e2e/jobs/chain-step1/: job.yaml  script.sh
tests/e2e/jobs/chain-step2/: job.yaml  script.sh
tests/e2e/jobs/echo-test/: job.yaml  manifest.yaml  script.sh
tests/integration/: test_coordinator_v2_integration.py  test_minio.py  test_mqtt.py
tests/unit/: test_chain_execution.py  test_cleanup.py  test_coordinator_v2.py  test_executor_crash.py  test_heartbeat.py  test_models.py  test_register_lock.py  test_register_model.py  test_registry_reload.py  test_scheduler.py  test_tree_builder.py  test_write_through.py
tools/ljc/: .ljcconfig.example  Cargo.toml  DEVELOPER-COMMANDS-DESIGN.md  PHASE6-SUMMARY.md  ROADMAP.md  ljc.1  ljc.1.scd
tools/ljc/src/: config.rs  main.rs  mqtt_client.rs  progress.rs  registry.rs  utils.rs  validator.rs
tools/ljc/src/commands/: build.rs  bump.rs  deploy.rs  exec.rs  extract.rs  info.rs  init.rs  kill.rs  list.rs  logs.rs  mod.rs  new.rs  ps.rs  registry.rs  self_update.rs  status.rs  sync.rs  tail.rs  test.rs  validate.rs
tools/ljc/tests/: integration_test.rs
